--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "classic_puzzle",
+  "name": "Classic Puzzle",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -12,7 +12,8 @@
     "expo": "~53.0.11",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.3"
+    "react-native": "0.79.3",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
